--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "karma": "karma start"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +56,7 @@
     "karma-jasmine": "^5.1.0",
     "karma-webpack": "^5.0.1",
     "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.102.1"
   }
 }
